# Transctl

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  pypi_release.yml  quality.yml
src/: console_formater.py
src/cli/: main.py  utils.py
src/cli/commands/: __init__.py  init.py  prune.py  run.py  show_langs.py  show_resources.py
src/cli/commands/groups/cache/: build.py  g_manifest.py  purge.py
src/core/: configuration_manager.py  translation_coordinator.py  translation_run_manifest.py
src/core/constants/: supported_languages.py
src/core/factory/: engine_factory.py  translator_factory.py
src/core/handlers/: base_translation_handler.py  handle_html_translation.py  handle_json_translation.py
src/core/translators/: azure_translator.py  base_translator.py  deepl_translator.py
src/models/: app_config.py  engine_config.py  policies.py  tm_store.py  translation_resource.py
src/transctl/: console_formater.py
src/transctl/ci_runners/: base_runner.py  ci_runner_factory.py  gitlab_runner.py
src/transctl/cli/: main.py  utils.py
src/transctl/cli/commands/: __init__.py  ci.py  init.py  prune.py  run.py  show_langs.py  show_resources.py
src/transctl/cli/commands/groups/cache/: build.py  g_manifest.py  purge.py
src/transctl/core/: configuration_manager.py  translation_coordinator.py  translation_run_manifest.py
src/transctl/core/constants/: app.py  supported_languages.py
src/transctl/core/factory/: engine_factory.py  translator_factory.py
src/transctl/core/handlers/: base_translation_handler.py  handle_html_translation.py  handle_json_translation.py
src/transctl/core/translators/: azure_translator.py  base_translator.py  deepl_translator.py
src/transctl/models/: app_config.py  ci_runner_config.py  engine_config.py  tm_store.py  translation_manifest.py  translation_resource.py
src/transctl/utils/: git_helpers.py  i_o.py  utils_suit.py
src/utils/: i_o.py  utils_suit.py
tests/unit/: test_app_config.py  test_engine_factory.py  test_translation_resource_creation.py
