[build-system]
requires = ["setuptools>=80.9"]
build-backend = "setuptools.build_meta"

[project]
name = "transctl"
version = "1.0.0"
description = "A command-line tool for managing application localization and generating translations using machine translation services."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click~=8.3.1",
    "colorama~=0.4.6",
    "deepl~=1.27.0",
    "pydantic~=2.12.5",
    "click~=8.3.1",
    "colorama~=0.4.6",
    "bs4~=0.0.2",
    "beautifulsoup4~=4.14.3",
    "tomli~=2.4.0",
    "typing_extensions~=4.15.0",
    "tomli_w~=1.2.0",
    "SQLAlchemy~=2.0.46",
    "azure-ai-translation-text~=1.0.1",
    "json5~=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.scripts]
transctl = "transctl.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 250
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
section-order = [
    "standard-library",
    "first-party",
    "local-folder",
    "third-party",
]

known-first-party = ["transctl"]
lines-after-imports = 2
detect-same-package = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
